--- a/ProjetPendu/ProjetPendu/ProjetPendu.csproj
+++ b/ProjetPendu/ProjetPendu/ProjetPendu.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dictionary.cs" />
+    <Compile Include="ICharacter.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="IWordStorage.cs" />
     <Compile Include="Player.cs" />
