--- a/ProjetPendu/ProjetPendu/ProjetPendu.csproj
+++ b/ProjetPendu/ProjetPendu/ProjetPendu.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Input.cs" />
+    <Compile Include="Iinput.cs" />
     <Compile Include="Dictionary.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="IWordStorage.cs" />
