--- a/ProjetPendu/ProjetPendu/ProjetPendu.csproj
+++ b/ProjetPendu/ProjetPendu/ProjetPendu.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IOutput.cs" />
+    <Compile Include="Output.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Iinput.cs" />
     <Compile Include="Dictionary.cs" />
@@ -52,6 +54,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rules.cs" />
     <Compile Include="Word.cs" />
     <Compile Include="WordFileStorage.cs" />
   </ItemGroup>
