--- a/ProjetPendu/ProjetPendu/ProjetPendu.csproj
+++ b/ProjetPendu/ProjetPendu/ProjetPendu.csproj
@@ -43,15 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Iinput.cs" />
     <Compile Include="Dictionary.cs" />
     <Compile Include="ICharacter.cs" />
+    <Compile Include="IOutput.cs" />
     <Compile Include="IPlayer.cs" />
     <Compile Include="IWordStorage.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rules.cs" />
     <Compile Include="Word.cs" />
     <Compile Include="WordFileStorage.cs" />
   </ItemGroup>
