--- a/ProjetPendu/ProjetPendu/ProjetPendu.csproj
+++ b/ProjetPendu/ProjetPendu/ProjetPendu.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Input.cs" />
-    <Compile Include="Iinput.cs" />
+    <Compile Include="IInput.cs" />
     <Compile Include="Dictionary.cs" />
     <Compile Include="ICharacter.cs" />
     <Compile Include="IOutput.cs" />
