--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -10,5 +10,6 @@
          Si le mot contient la lettre, alors toutes les lettres de ce mot s'afficheront. Dans le cas contraire, un pendu commenera à se dessiner. La partie se termine lorsque le mot est trouvé 
          par le joueur, ou bien si le dessin du pendu s'affiche entièrement avant que le joueur trouve le mot."/>
     <add key="mainRulesDifficulties" value="Dans cette version du jeu, il y a 3 niveaux de difficulté" />
-  </appSettings>
+    <add key="mainMenu" value="Tapez 1 pour afficher les règles et 2 pour quitter le jeu"/> 
+</appSettings>
 </configuration>
