MAJ Character + affichage + test
Ajout de l'affichage du pendu
+ test
+ correction quelques erreurs ds Character et affichage

--- a/ProjetPendu/ProjetPenduTests/ProjetPenduTests.csproj
+++ b/ProjetPendu/ProjetPenduTests/ProjetPenduTests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="OutputUnitTest.cs" />
     <Compile Include="UnitTestDictionary.cs" />
     <Compile Include="UnitTestWordFileStorage.cs" />
     <Compile Include="UnitTestWord.cs" />
