--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -6,6 +6,7 @@
     <add key="maxNbErrors" value="8"/>
     <add key="rulesDetails" value="Le joueur peut proposer soit une lettre, soit un mot complet par tour."/>
     <add key="defaultWordsFilePath" value="c:\\temp\\words.txt"/>
+    <add key="defaultCharacterPath" value = "..\fichiePerso.txt"/>
     <add key="mainRules" value="Le pendu est un jeu très connu et très joué à travers le monde. Son but est très simple : trouver un mot caché en proposant des lettres.
          Si le mot contient la lettre, alors toutes les lettres de ce mot s'afficheront. Dans le cas contraire, un pendu commenera à se dessiner. La partie se termine lorsque le mot est trouvé 
          par le joueur, ou bien si le dessin du pendu s'affiche entièrement avant que le joueur trouve le mot."/>
