Modification du jeu, ajout des prompt et prise en charge du reset du jeu. Travail avec Nicolas Notari.

--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -10,6 +10,12 @@
          Si le mot contient la lettre, alors toutes les lettres de ce mot s'afficheront. Dans le cas contraire, un pendu commenera à se dessiner. La partie se termine lorsque le mot est trouvé 
          par le joueur, ou bien si le dessin du pendu s'affiche entièrement avant que le joueur trouve le mot."/>
     <add key="mainRulesDifficulties" value="Dans cette version du jeu, il y a 3 niveaux de difficulté" />
-    <add key="mainMenu" value="Tapez 1 pour afficher les règles et 2 pour quitter le jeu"/> 
+    <add key="mainMenu" value="Tapez ? pour afficher les règles, * pour quitter le jeu et une lettre ou un mot pour jouer"/>
+    <add key="symbolRules" value="?"/>
+    <add key="symbolQuit" value="*"/>
+    <add key="lostPrompt" value="Vous avez perdu le game"/>
+    <add key="winPrompt" value="Vous avez winné"/>
+    <add key="resetPrompt" value="Voulez vous reset le game ? Tapez 'oui'"/>
+    <add key="symbolReset" value ="oui"/>
 </appSettings>
 </configuration>
