Mise en place Amélioration
Modification pour prendre en compte l'évolution supplémentaire

--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -17,6 +17,7 @@
     <add key="lostPrompt" value="Vous avez perdu le game"/>
     <add key="winPrompt" value="Vous avez winné"/>
     <add key="resetPrompt" value="Voulez vous reset le game ? Tapez 'oui'"/>
+    <add key="endwordsPrompt" value="Il n'y a plus de mot à trouver !"/>
     <add key="symbolReset" value ="oui"/>
 </appSettings>
 </configuration>
