Modif Dossier et spec
Plus de détail pour les specs, modif du libelle pour fonction recharge
dictionnaire, ajout au dossier

--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -13,7 +13,7 @@
     <add key="lostPrompt" value="Vous avez perdu le game"/>
     <add key="winPrompt" value="Vous avez winné"/>
     <add key="resetPrompt" value="Voulez vous reset le game ? Tapez 'oui'"/>
-    <add key="endwordsPrompt" value="Il n'y a plus de mot à trouver !"/>
+    <add key="endwordsPrompt" value="Il n'y a plus de mot à trouver ! Le dictionnaire est réchargé."/>
     <add key="symbolReset" value ="oui"/>
 </appSettings>
 </configuration>
