--- a/ProjetPendu/ProjetPenduTests/ProjetPenduTests.csproj
+++ b/ProjetPendu/ProjetPenduTests/ProjetPenduTests.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -50,7 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="OutputUnitTest.cs" />
+    <Compile Include="UnitTestCharacter.cs" />
     <Compile Include="UnitTestDictionary.cs" />
     <Compile Include="UnitTestWordFileStorage.cs" />
     <Compile Include="UnitTestWord.cs" />
@@ -61,6 +62,9 @@
       <Project>{d591d722-a437-4bbb-8782-97e3dc37adf8}</Project>
       <Name>ProjetPendu</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
