Ajout du nombre de lettres restantes
Ajout de toutes les méthodes pour afficher et déterminer le nombre de
lettres restantes à trouver

--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -18,6 +18,8 @@
     <add key="winPrompt" value="Vous avez winné"/>
     <add key="resetPrompt" value="Voulez vous reset le game ? Tapez 'oui'"/>
     <add key="endwordsPrompt" value="Il n'y a plus de mot à trouver ! Le dictionnaire est réchargé."/>
-   
-</appSettings>
+    <add key="numberlettersPrompt" value="Nombre de lettres restantes à trouver :"/>
+
+
+  </appSettings>
 </configuration>
