--- a/ProjetPendu/ProjetPendu/ProjetPendu.csproj
+++ b/ProjetPendu/ProjetPendu/ProjetPendu.csproj
@@ -77,6 +77,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="fichiers\fichiePerso.txt">
+      <CustomToolNamespace>fichierSystème</CustomToolNamespace>
+    </Content>
+    <Content Include="fichiers\words.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
