Ajout du mot si perdu
affichage du mot si perdu dans la console

--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -14,7 +14,7 @@
     <add key="symbolReset" value ="oui"/>
 
     <add key="mainMenu" value="Tapez ? pour afficher les règles, * pour quitter le jeu et une lettre ou un mot pour jouer"/>
-    <add key="lostPrompt" value="Vous avez perdu le game"/>
+    <add key="lostPrompt" value="Vous avez perdu le game, le mot était : "/>
     <add key="winPrompt" value="Vous avez winné"/>
     <add key="resetPrompt" value="Voulez vous reset le game ? Tapez 'oui'"/>
     <add key="endwordsPrompt" value="Il n'y a plus de mot à trouver ! Le dictionnaire est réchargé."/>
