MAJ bug  + maj texte

--- a/ProjetPendu/ProjetPendu/App.config
+++ b/ProjetPendu/ProjetPendu/App.config
@@ -17,7 +17,7 @@
     <add key="lostPrompt" value="Vous avez perdu le game, le mot était : "/>
     <add key="winPrompt" value="Vous avez winné"/>
     <add key="resetPrompt" value="Voulez vous reset le game ? Tapez 'oui'"/>
-    <add key="endwordsPrompt" value="Il n'y a plus de mot à trouver ! Le dictionnaire est réchargé."/>
+    <add key="endwordsPrompt" value="Il n'y a plus de mot à trouver ! Le dictionnaire est rechargé."/>
     <add key="numberlettersPrompt" value="Nombre de lettres restantes à trouver :"/>
 
 
